--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Сводная страница по клапанам управления Runxin: серии, особенности, подбор, документация и FAQ." />
   <style>
     :root{
-      --bg:#0b1020;        /* тёмный фон шапки/футера */
-      --txt:#11131a;       /* основной текст */
-      --muted:#6b7280;     /* приглушённый текст */
+      --bg:#ffffff;        /* светлый фон */
+      --txt:#0f172a;       /* основной текст */
+      --muted:#64748b;     /* приглушённый текст */
       --card:#ffffff;      /* фон карточек */
-      --ui:#eef2f7;        /* фон страницы */
-      --primary:#2563eb;   /* акцент */
-      --primary-2:#1d4ed8; /* hover */
-      --ring:rgba(37,99,235,.35);
+      --ui:#f8fafc;        /* фон страницы */
+      --primary:#16a34a;   /* зелёный акцент (Гейзер-стиль) */
+      --primary-2:#15803d; /* hover */
+      --ring:rgba(22,163,74,.25);
       --ok:#16a34a; --warn:#f59e0b; --danger:#ef4444;
       --radius:16px;
     }
@@ -24,21 +24,22 @@
     a:hover{text-decoration:underline}
     .container{max-width:1200px; margin:0 auto; padding:0 20px}
     header{
-      position:sticky; top:0; z-index:50; background:linear-gradient(180deg, var(--bg), #0b1020ef 60%, transparent);
-      color:white; border-bottom:1px solid rgba(255,255,255,.08); backdrop-filter:saturate(140%) blur(6px);
+      position:sticky; top:0; z-index:50; background:var(--bg);
+      color:var(--txt); border-bottom:1px solid #e2e8f0; backdrop-filter:saturate(120%) blur(6px);
     }
-    .topbar{display:flex; align-items:center; gap:14px; padding:18px 0}
+    .topbar{display:flex; align-items:center; gap:14px; padding:14px 0}
     .logo{display:flex; gap:10px; align-items:center}
-    .logo .mark{width:34px;height:34px;border-radius:10px;background:linear-gradient(135deg,#3b82f6,#22d3ee)}
+    .logo .mark{width:34px;height:34px;border-radius:10px;background:linear-gradient(135deg,#22c55e,#86efac)}
     .logo b{font-weight:700; letter-spacing:.3px}
     .search{margin-left:auto; position:relative; width:min(420px,48vw)}
-    .search input{width:100%; border-radius:999px; border:1px solid rgba(255,255,255,.18); background:rgba(255,255,255,.08); color:#fff; padding:11px 44px 11px 14px; outline:none}
-    .search input::placeholder{color:#c9d1e5}
+    .search input{width:100%; border-radius:12px; border:1px solid #d1d5db; background:#fff; color:var(--txt); padding:11px 44px 11px 12px; outline:none; box-shadow:0 1px 0 #f3f4f6}
+    .search input:focus{border-color:var(--primary); box-shadow:0 0 0 4px var(--ring)}
+    .search input::placeholder{color:#94a3b8}
     .search svg{position:absolute; right:12px; top:50%; transform:translateY(-50%); opacity:.85}
 
-    nav.breadcrumbs{font-size:.9rem; color:#c9d1e5; padding:8px 0 16px}
-    nav.breadcrumbs a{color:#c9d1e5}
-    nav.breadcrumbs .sep{opacity:.65; margin:0 6px}
+    nav.breadcrumbs{font-size:.9rem; color:#475569; padding:8px 0 14px}
+    nav.breadcrumbs a{color:#475569}
+    nav.breadcrumbs .sep{opacity:.55; margin:0 6px}
 
     .layout{display:grid; grid-template-columns:280px 1fr; gap:28px}
     @media (max-width: 980px){.layout{grid-template-columns:1fr}}
@@ -46,10 +47,11 @@
     .sidebar{position:sticky; top:86px; align-self:start}
     .toc{background:var(--card); border:1px solid #e5e7eb; padding:14px; border-radius:var(--radius)}
     .toc h4{margin:6px 0 8px; font-size:1rem}
-    .toc a{display:flex; align-items:center; gap:8px; padding:9px 10px; margin:2px 0; border-radius:10px; color:#111827}
-    .toc a:hover{background:#f3f4f6}
+    .toc a{display:flex; align-items:center; gap:8px; padding:9px 10px; margin:2px 0; border-radius:10px; color:#0f172a; border:1px solid transparent}
+    .toc a:hover{background:#f1f5f9}
+    .toc a.active{background:#ecfdf5; border-color:#bbf7d0; box-shadow:0 0 0 3px rgba(34,197,94,.12)}
 
-    .hero{background:linear-gradient(160deg,#f6f8ff,#eef7ff 40%, #f6fff9 100%); border:1px solid #e5e7eb; border-radius:18px; padding:26px}
+    .hero{background:linear-gradient(160deg,#f6fff9,#f0fdf4 40%, #f6fff9 100%); border:1px solid #e5e7eb; border-radius:18px; padding:26px}
     .hero h1{margin:4px 0 10px; font-size:clamp(24px,3.4vw,38px)}
     .hero p{margin:0; color:#334155; max-width:72ch}
 
@@ -58,22 +60,22 @@
     .section p.lead{color:#374151; margin:-4px 0 16px}
 
     .card-grid{display:grid; grid-template-columns:repeat(12,1fr); gap:16px}
-    .card{grid-column:span 4; background:var(--card); border:1px solid #e5e7eb; border-radius:16px; padding:16px; transition:transform .12s ease, box-shadow .12s ease}
-    .card:hover{transform:translateY(-2px); box-shadow:0 10px 28px rgba(2,6,23,.06)}
+    .card{grid-column:span 4; background:var(--card); border:1px solid #e5e7eb; border-radius:16px; padding:16px; transition:transform .12s ease, box-shadow .12s ease, border-color .12s ease}
+    .card:hover{transform:translateY(-2px); box-shadow:0 10px 28px rgba(2,6,23,.06); border-color:#d1fae5}
     .card h3{margin:4px 0 8px; font-size:1.05rem}
     .card p{margin:0; color:#4b5563}
-    .badge{display:inline-flex; align-items:center; gap:6px; font-size:.8rem; background:#eef2ff; color:#3730a3; border-radius:999px; padding:4px 10px; border:1px solid #c7d2fe}
+    .badge{display:inline-flex; align-items:center; gap:6px; font-size:.8rem; background:#ecfdf5; color:#065f46; border-radius:999px; padding:4px 10px; border:1px solid #a7f3d0}
     @media (max-width: 980px){.card{grid-column:span 6}}
     @media (max-width: 640px){.card{grid-column:span 12}}
 
     .feature{display:flex; gap:14px; align-items:flex-start}
-    .feature .dot{width:14px; height:14px; border-radius:50%; background:var(--primary); box-shadow:0 0 0 6px rgba(37,99,235,.12)}
+    .feature .dot{width:14px; height:14px; border-radius:50%; background:var(--primary); box-shadow:0 0 0 6px rgba(22,163,74,.12)}
 
-    .callout{border-left:4px solid var(--primary); background:#f1f5ff; padding:12px 14px; border-radius:10px; color:#1f2a44}
+    .callout{border-left:4px solid var(--primary); background:#ecfdf5; padding:12px 14px; border-radius:10px; color:#065f46}
 
     .compare{width:100%; border-collapse:separate; border-spacing:0; background:var(--card); border:1px solid #e5e7eb; border-radius:16px; overflow:hidden}
     .compare th, .compare td{padding:12px 14px; text-align:left; border-bottom:1px solid #eef0f3}
-    .compare th{background:#f8fafc; font-weight:600}
+    .compare th{background:#ecfdf5; font-weight:700; position:sticky; top:0; z-index:1}
     .compare tr:last-child td{border-bottom:none}
 
     .docs{display:grid; grid-template-columns:repeat(12,1fr); gap:16px}
@@ -83,8 +85,9 @@
     .doc .actions{display:flex; gap:8px; flex-wrap:wrap}
     .btn{display:inline-flex; align-items:center; gap:8px; padding:10px 14px; border-radius:12px; background:var(--primary); color:#fff; border:1px solid var(--primary); cursor:pointer}
     .btn:hover{background:var(--primary-2)}
-    .btn.secondary{background:#f8fafc; color:#0f172a; border-color:#e5e7eb}
-    .btn.secondary:hover{background:#eef2f7}
+    .btn:focus{outline:none; box-shadow:0 0 0 4px var(--ring)}
+    .btn.secondary{background:#ecfdf5; color:#065f46; border-color:#a7f3d0}
+    .btn.secondary:hover{background:#d1fae5}
 
     details{background:var(--card); border:1px solid #e5e7eb; border-radius:14px; padding:12px 16px}
     details+details{margin-top:10px}
@@ -104,7 +107,7 @@
       </a>
       <div class="search" role="search">
         <input type="search" placeholder="Поиск по клапанам, сериям и моделям…" aria-label="Поиск" />
-        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M21 21l-4.35-4.35" stroke="white" stroke-width="2" stroke-linecap="round"/><circle cx="11" cy="11" r="7" stroke="white" stroke-width="2"/></svg>
+        <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M21 21l-4.35-4.35" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><circle cx="11" cy="11" r="7" stroke="currentColor" stroke-width="2"/></svg>
       </div>
     </div>
     <nav class="container breadcrumbs" aria-label="Хлебные крошки">
@@ -314,5 +317,32 @@
       </footer>
     </section>
   </main>
+
+  <button id="toTop" aria-label="Наверх" style="position:fixed; right:18px; bottom:18px; display:none; border:none; background:var(--primary); color:#fff; padding:12px 14px; border-radius:999px; box-shadow:0 10px 24px rgba(2,6,23,.18); cursor:pointer">↑</button>
+
+  <script>
+    // Подсветка активного раздела в TOC
+    (function(){
+      const links=[...document.querySelectorAll('.toc a')];
+      const map=new Map(links.map(a=>[a.getAttribute('href').slice(1),a]));
+      const observer=new IntersectionObserver(entries=>{
+        entries.forEach(e=>{
+          const id=e.target.id; const link=map.get(id);
+          if(!link) return;
+          if(e.isIntersecting){ links.forEach(l=>l.classList.remove('active')); link.classList.add('active'); }
+        })
+      },{rootMargin:'-40% 0px -55% 0px', threshold:[0,1]});
+      document.querySelectorAll('main [id]').forEach(el=>observer.observe(el));
+    })();
+
+    // Кнопка «Наверх»
+    (function(){
+      const btn=document.getElementById('toTop');
+      window.addEventListener('scroll',()=>{
+        btn.style.display = window.scrollY>600 ? 'block' : 'none';
+      });
+      btn.addEventListener('click',()=>window.scrollTo({top:0, behavior:'smooth'}));
+    })();
+  </script>
 </body>
 </html>
